@@ -1,0 +1,1 @@
+#include "config/sparc/compiler-info-solaris2.h"
