@@ -1,0 +1,1 @@
+#include "config/sparc/mframe-solaris2.h"
